k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sysopexapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sysopExapp
  template:
    metadata:
      labels:
        app: sysopExapp
    spec:


      containers:
      - name: app
        image: sysopex123.azurecr.io/sysopexapp:v1



        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
