k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: sysops-service
spec:
  type: ClusterIP
  selector:
    app: sysopExapp
  ports:
  - port: 80
    targetPort: 8080
